# python-opentelemetry-for-google-cloud

./: .gitignore  Dockerfile  README.md  otel-collector-config.yaml  pyproject.toml
src/fastapi_tracing/: __init__.py  api.py  app.py  ops.py  util.py
